# human-in-the-loop

./: Cargo.toml  LICENSE  README.md
src/: discord.rs  main.rs  mcp_handler.rs  slack.rs  tools.rs
